# expenses-ai-agent

./: .env.example  .gitignore  README.md  pyproject.toml
src/expenses_ai_agent/: settings.py
src/expenses_ai_agent/api/: deps.py  main.py
src/expenses_ai_agent/api/routes/: analytics.py  categories.py  expenses.py
src/expenses_ai_agent/api/schemas/: expense.py
src/expenses_ai_agent/cli/: cli.py
src/expenses_ai_agent/llms/: base.py  openai.py  output.py
src/expenses_ai_agent/prompts/: system.py
src/expenses_ai_agent/services/: classification.py  preprocessing.py
src/expenses_ai_agent/storage/: exceptions.py  models.py  repo.py
src/expenses_ai_agent/streamlit/: api_client.py  app.py
src/expenses_ai_agent/streamlit/views/: add_expense.py  dashboard.py  expenses.py
src/expenses_ai_agent/telegram/: bot.py  exceptions.py  handlers.py  keyboards.py
src/expenses_ai_agent/tools/: tools.py
src/expenses_ai_agent/utils/: currency.py  date_formatter.py
tests/unit/: test_week1.py  test_week2.py  test_week3.py  test_week4_handlers.py  test_week4_keyboards.py  test_week4_preprocessing.py  test_week5_api.py  test_week5_streamlit.py  test_week5_streamlit_views.py
