[project]
name = "expenses-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Daniele", email = "danielerb.dev@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "openai>=2.41.1",
    "pydantic-settings>=2.14.2",
    "python-telegram-bot>=22.8",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "sqlmodel>=0.0.38",
    "typer>=0.26.7",
]

[project.scripts]
expenses-ai-agent = "expenses_ai_agent.cli.cli:app"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "prek>=0.4.4",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.16",
    "ty>=0.0.46",
]
